# expense-tracker

./: README.md
backend/: .coverage  .env.example  .gitignore  README.md  pyproject.toml  worker.py  wrangler.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: dashboard.py  exchange_rate.py  expenses.py
backend/tests/: conftest.py  test_dashboard.py  test_exchange_rate.py  test_expenses.py  test_integration.py
frontend/: .gitignore  README.md  TESTING.md  biome.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts  dashboard.ts  exchange.ts  expenses.ts
frontend/src/api/__tests__/: dashboard.test.ts  exchange.test.ts  expenses.test.ts
frontend/src/components/: AppHeader.tsx  Dashboard.tsx  ExchangeRate.tsx  ExpenseForm.tsx  ExpenseList.tsx
frontend/src/components/__tests__/: Dashboard.test.tsx  ExpenseForm.test.tsx  ExpenseList.test.tsx
frontend/src/test/: setup-bun.ts  setup.ts
